--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -18,14 +18,16 @@
 }
 
 .title {
-  font-size: 25px;
-  font-weight: 700;
+  font-size: 1.6em;
+  font-weight: 200;
+  align-self: center;
+  margin-bottom: 0.2em;
 }
 
 .description {
-  margin-top: 6px;
-  font-size: 25px;
-  font-weight: 400;
+  margin: 0.5em 0em;
+  font-size: 1em;
+  font-weight: 100;
 }
 
 .skills {
@@ -34,16 +36,16 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 6px;
+  gap: 0.4em;
   list-style: none;
 }
 
 .skill {
-  font-size: 25px;
-  font-weight: 400;
+  font-size: 0.9em;
+  font-weight: 100;
   border-radius: 100px;
   background: var(--color-dark);
-  padding: 2px 22px;
+  padding: 0.2em 1.2em;
 }
 
 .links {
@@ -56,9 +58,9 @@
 .link {
   text-decoration: none;
   color: var(--color-text);
-  font-size: 30px;
-  font-weight: 600;
+  font-size: 1.3em;
+  font-weight: 100;
   border-radius: 100px;
   background: var(--color-primary);
-  padding: 1px 22px;
+  padding: 0.2em 1.4em;
 }
